--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
-
+    compileOptions.encoding = 'windows-1251'
     defaultConfig {
         applicationId "com.nomapp.nomapp_beta"
         minSdkVersion 16
