My congratulations! Now we can watch all available recipes in separated activity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         <activity
             android:name=".AddIngridientsActivity"
             android:label="Add Ingridient"></activity>
+        <activity
+            android:name=".ListOfAvaliableRecipesActivity"
+            android:label="Available recipes"></activity>
     </application>
 
 
