--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,10 +20,11 @@ android {
 }
 
 dependencies {
-        compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.android.support:cardview-v7:+'
     compile 'com.android.support:recyclerview-v7:+'
     compile 'com.android.support:palette-v7:+'
     compile 'com.github.brnunes:swipeablerecyclerview:1.0.1'
+    compile 'com.melnykov:floatingactionbutton:1.3.0'
 }
