--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.android.support:palette-v7:+'
     compile 'com.github.brnunes:swipeablerecyclerview:1.0.1'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
+    compile 'com.android.support:appcompat-v7:22.2.0'
 }
