SettingsActivity.java and settings of localization in it has been added (not optimized)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,9 @@
         <activity
             android:name=".RecipeActivity"
             android:label="Steps"></activity>
+        <activity
+            android:name=".SettingsActivity"
+            android:label="Steps"></activity>
     </application>
 
 
