SlidingTabsLayout now working!
change listner to TabsActivity to see

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
         <activity
             android:name=".SettingsActivity"
             android:label="Steps"></activity>
+        <activity android:name=".TabsActivity"
+            android:label="Steps"></activity>
     </application>
 
 
