division according to categories added. TODO: bug with color of listItems.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,8 @@
             android:label="Steps"></activity>
         <activity android:name=".TabsActivity"
             android:label="Steps"></activity>
+        <activity android:name=".CategoriesActivity"
+            android:label="Steps"></activity>
     </application>
 
 
