--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     compile 'com.github.brnunes:swipeablerecyclerview:1.0.1'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
     compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.github.ksoichiro:android-observablescrollview:1.5.2'
 }
