--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".StartActivity"
+            android:name=".Activities.StartActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,21 +18,24 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".AddIngridientsActivity"
+            android:name=".Activities.AddIngridientsActivity"
             android:label="Add Ingridient"></activity>
         <activity
-            android:name=".ListOfAvaliableRecipesActivity"
+            android:name=".Activities.ListOfAvaliableRecipesActivity"
             android:label="Available recipes"></activity>
         <activity
-            android:name=".RecipeActivity"
+            android:name=".Activities.RecipeActivity"
             android:label="Steps"></activity>
         <activity
-            android:name=".SettingsActivity"
+            android:name=".Activities.SettingsActivity"
             android:label="Steps"></activity>
-        <activity android:name=".TabsActivity"
+        <activity android:name=".Activities.TabsActivity"
             android:label="Steps"></activity>
-        <activity android:name=".CategoriesActivity"
+        <activity android:name=".Activities.CategoriesActivity"
             android:label="Steps"></activity>
+        <activity android:name=".Activities.RecipePreviewActivity"
+            android:label="Preview"></activity>
+
     </application>
 
 
