--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,10 @@ dependencies {
     compile 'com.android.support:palette-v7:+'
     compile 'com.github.brnunes:swipeablerecyclerview:1.0.1'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
-    compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.github.ksoichiro:android-observablescrollview:1.5.2'
+
+    compile ('com.github.florent37:materialviewpager:1.1.0@aar'){
+        transitive = true
+    }
 }
