--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,13 @@
     package="com.nomapp.nomapp_beta">
 
     <application
-        android:name=".MyApp"
+        android:name=".Database.MyApp"
         android:allowBackup="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Activities.StartActivity"
+            android:name=".Start.StartActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,24 +18,21 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Activities.AddIngridientsActivity"
+            android:name=".AddIngredients.AddIngridientsActivity"
             android:label="Add Ingridient"></activity>
         <activity
-            android:name=".Activities.ListOfAvaliableRecipesActivity"
+            android:name=".AvailableRecipes.ListOfAvaliableRecipesActivity"
             android:label="Available recipes"></activity>
         <activity
-            android:name=".Activities.RecipeActivity"
+            android:name=".Settings.SettingsActivity"
             android:label="Steps"></activity>
-        <activity
-            android:name=".Activities.SettingsActivity"
+        <activity android:name=".Steps.TabsActivity"
             android:label="Steps"></activity>
-        <activity android:name=".Activities.TabsActivity"
+        <activity android:name=".Categories.CategoriesActivity"
             android:label="Steps"></activity>
-        <activity android:name=".Activities.CategoriesActivity"
-            android:label="Steps"></activity>
-        <activity android:name=".Activities.RecipePreviewActivity"
+        <activity android:name=".RecipePreview.RecipePreviewActivity"
             android:label="Preview"></activity>
-        <activity android:name=".Activities.SearchIngredientsActivity"
+        <activity android:name=".FindIngredients.SearchIngredientsActivity"
             android:label="Search"></activity>
 
 
