Activity with all recipes.
Activity with all recipes added. Navigation drawer fixed. Button on the
startactivity is unavailable when count of available recipes = 0.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,8 +34,8 @@
         <activity android:name=".RecipePreview.RecipePreviewActivity"
             android:label="Preview"></activity>
 
-        <activity android:name=".FindIngredients.SearchIngredientsActivity"
-            android:label="Search">
+        <activity android:name=".AllRecipes.AllRecipesActivity"
+            android:label="All Recipes">
         </activity>
 
 
