--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".Start.StartActivity"
-            android:label="@string/app_name">
+            android:label="Холодильник">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,7 +20,7 @@
         </activity>
         <activity
             android:name=".AddIngredients.AddIngridientsActivity"
-            android:label="Add Ingredient"/>
+            android:label=" "/>
         <activity
             android:name=".AvailableRecipes.ListOfAvailableRecipesActivity"
             android:label="Вы можете приготовить:"/>
