--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,13 +5,13 @@
     <application
         android:name=".Database.MyApp"
         android:allowBackup="true"
-        android:screenOrientation="portrait"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
             android:name=".Start.StartActivity"
-            android:label="Холодильник">
+            android:label="Холодильник"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,23 +20,30 @@
         </activity>
         <activity
             android:name=".AddIngredients.AddIngridientsActivity"
-            android:label=" "/>
+            android:label=" "
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".AvailableRecipes.ListOfAvailableRecipesActivity"
-            android:label="Вы можете приготовить:"/>
+            android:label="Вы можете приготовить:"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Settings.SettingsActivity"
-            android:label="Steps"/>
+            android:label="Steps"
+            android:screenOrientation="portrait"/>
         <activity android:name=".Steps.TabsActivity"
-            android:label="Steps"/>
+            android:label="Steps"
+            android:screenOrientation="portrait"/>
         <activity android:name=".Categories.CategoriesActivity"
-            android:label="Steps">
+            android:label="Steps"
+            android:screenOrientation="portrait">
         </activity>
         <activity android:name=".RecipePreview.RecipePreviewActivity"
-            android:label="Preview"/>
+            android:label="Preview"
+            android:screenOrientation="portrait"/>
 
         <activity android:name=".AllRecipes.AllRecipesActivity"
-            android:label="">
+            android:label=""
+            android:screenOrientation="portrait">
         </activity>
 
 
