--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,9 @@
         android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+
+        <receiver android:name=".Notification.TimeNotification" />
+
         <activity
             android:name=".Start.StartActivity"
             android:label="@string/app_name"
