--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
 
-        <receiver android:name=".Notification.TimeNotification" />
+        <receiver    android:name=".Alarms.AlarmReceiver"
+            android:enabled="true"
+            android:exported="true"/>
 
         <activity
             android:name=".Start.StartActivity"
