--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,10 @@ dependencies {
     compile 'com.melnykov:floatingactionbutton:1.3.0'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.github.ksoichiro:android-observablescrollview:1.5.2'
+    compile 'com.google.android.gms:play-services-analytics:8.4.0'
     compile ('com.github.florent37:materialviewpager:1.1.0@aar'){
         transitive = true
     }
 }
+
+apply plugin: 'com.google.gms.google-services'
